Tue May 23 07:11:53 2000  David L. Levine  <levine@cs.wustl.edu>

        * CM_Server.cpp (receive): changed type of local sin_len
          to be dependent on ACE_HAS_SOCKLEN_T or ACE_HAS_SIZET_SOCKET_LEN.
          See Mon May 22 21:10:24 2000  David L. Levine  <levine@cs.wustl.edu>

Mon May 22 21:10:24 2000  David L. Levine  <levine@cs.wustl.edu>

        * CM_Server.cpp (receive): changed type of local sin_len
          from int to size_t, to avoid warning from g++ on Linux
          about "change of signedness".  Note that it would be
          better to use ACE_SOCKET_LEN, but that's defined in
          ace/OS.i.  So, it wouldn't be visible with inlining
          disabled.

Mon May 22 21:07:57 2000  David L. Levine  <levine@cs.wustl.edu>

        * BS_Server.cpp (insert): initialize local cmp to 0, to
          prevent warning from g++ 2.91.66 (on Linux) about possible
          use without initialization.

Fri May  5 10:40:46 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * Fixed a coule of errors due to mismatches between int and size_t.
          Thanks to David Levine and Darrell Brunsch for reporting these.

Thu Apr 20 09:20:28 2000  Carlos O'Ryan  <coryan@uci.edu>

        * Drwho_Node.cpp:
        * File_Manager.cpp:
        * HT_Client.cpp:
        * HT_Server.cpp:
        * Hash_Table.cpp:
        * Makefile:
        * PMC_All.cpp:
        * PMC_Flo.cpp:
        * PMC_Ruser.cpp:
        * PMC_Usr.cpp:
        * PMS_All.cpp:
        * PMS_Flo.cpp:
        * PMS_Ruser.cpp:
        * PMS_Usr.cpp:
        * PM_Client.cpp:
        * PM_Server.cpp:
        * Protocol_Manager.cpp:
        * Protocol_Record.cpp:
        * Rwho_DB_Manager.cpp:
        * Single_Lookup.cpp:
        * server.cpp:
          Fixed many warnings wrt order of fields in the initialization
          section.
          Add missing template instantiation.
          Add missing includes.
          Fixed problems with the scope of variables declared inside a