@@ -41,26 +41,17 @@ CM_Server::open (short port_number)
 int
 CM_Server::receive (int)
 {
-  // It would be nice to use ACE_SOCKET_LEN here, but that's only
-  // defined in ace/OS.i.
-#if defined (ACE_HAS_SOCKLEN_T)
-  socklen_t sin_len =
-#elif defined (ACE_HAS_SIZET_SOCKET_LEN)
-  size_t sin_len =
-#else
-  int sin_len =
-#endif /* ACE_HAS_SIZET_SOCKET_LEN */
-    sizeof this->sin_;
+  int sin_len = sizeof this->sin_;
 
   if (Options::get_opt (Options::DEBUG) != 0)
     ACE_DEBUG ((LM_DEBUG, "waiting for client to send...\n"));
 
-  int n = recvfrom (this->sokfd_,
-                    this->recv_packet_,
-                    UDP_PACKET_SIZE,
-                    0,
-                    (sockaddr *) &this->sin_,
-                    &sin_len);
+  int n = ACE_OS::recvfrom (this->sokfd_,
+                            this->recv_packet_,
+                            UDP_PACKET_SIZE,
+                            0,
+                            (sockaddr *) &this->sin_,
+                            &sin_len);
   if (n == -1)
     return -1;
 
